--- a/N2B1_CadCurriculos/wwwroot/css/Index.css
+++ b/N2B1_CadCurriculos/wwwroot/css/Index.css
@@ -1,23 +1,36 @@
-﻿.titulo {
+﻿:root {
+    --colorBG: #ffffff;
+    --color1: #333;
+    --colorText: #000000;
+}
+
+body{
+    background-color:var(--colorBG);
+}
+
+.titulo {
     margin: auto;
     width: 54%;
     padding: 30px;
     font-size: 54px;
     font-weight: 300;
     line-height: 58px;
+    color: var(--colorText);
 }
 
-h2{
-    font-weight:300;
+
+h2 {
+    font-weight: 300;
+    color: var(--colorText);
 }
 
 .options {
     font-size: 30px;
     padding: 0px;
     margin: 0px;
-    background-color: #EDEDED;
+    background-color: var(--colorBG);
     list-style: none;
-    font-weight:300;
+    font-weight: 300;
 }
 
     .options li {
@@ -27,17 +40,18 @@ h2{
         .options li a {
             padding: 30px 81px;
             display: inline-block;
-            background-color: #EDEDED;
+            background-color: var(--colorBG);
             color: #333;
             text-decoration: none;
-            border-bottom: 5px solid #EDEDED;
+            border-bottom: 2px solid var(--colorBG);
+            color: var(--colorText);
         }
 
 
             .options li a:hover {
-                background-color: #D6D6D6;
-                color: #6D6D6D;
-                border-bottom: 5px solid #A9A9A9;
+                background-color: var(--color1);
+                color: var(--colorText);
+                border-bottom: 5px solid var(--colorBG);
             }
 
 
@@ -45,20 +59,22 @@ h2{
     font-size: 20px;
     padding: 20px 25px;
     margin: 50px;
-    background-color: #EDEDED;
     list-style: none;
     text-align: left;
     font-weight: 400;
+    color: var(--colorText);
+    border: 1px solid var(--colorText);
 }
 
 .div2 {
     font-size: 20px;
     padding: 20px 25px;
     margin: 50px;
-    background-color: #EDEDED;
+    border: 1px solid var(--colorText);
     list-style: none;
     text-align: left;
     font-weight: 400;
+    color: var(--colorText);
 }
 
 #curriculum{
@@ -81,8 +97,9 @@ h2{
     font-size: 20px;
     padding: 20px 25px;
     margin: 50px;
-    background-color: #EDEDED;
+    border: 1px solid var(--colorText);
     list-style: none;
     text-align: left;
     font-weight: 400;
+    color: var(--colorText);
 }
