--- a/N2B1_CadCurriculos/Views/Curriculo/Listagem.cshtml
+++ b/N2B1_CadCurriculos/Views/Curriculo/Listagem.cshtml
@@ -19,6 +19,7 @@
                 <td>
                     <a href="/curriculo/Edit?cpf=@cv.Cpf"><img src="~/img/alterar.png" width="30" height="30" /></a>
                     <a href="/curriculo/Delete?cpf=@cv.Cpf"><img src="~/img/trash.png" width="30" height="30" /></a>
+                    <a href="/curriculo/Impressao?cpf=@cv.Cpf"><img src="~/img/printer.png" width="30" height="30" /></a>
                 </td>
                 <td>@cv.Cpf</td>
                 <td>@cv.Nome</td>
