ajuste html editar

--- a/N2B1_CadCurriculos/Views/Curriculo/Editar.cshtml
+++ b/N2B1_CadCurriculos/Views/Curriculo/Editar.cshtml
@@ -355,7 +355,7 @@
                             <br>
                             <input type="month" asp-for="Termino1" />
                         </div>
-                        <div>
+                        <div class="divLeft">
                             <label>Atividades</label>
                             <div>
                                 <textarea class="txtAtividades" asp-for="Atividades1" placeholder="Descreva suas atividades"></textarea>
@@ -392,7 +392,7 @@
                             <br>
                             <input type="month" asp-for="Termino2"/>
                         </div>
-                        <div>
+                        <div class="divLeft">
                             <label>Atividades</label>
                             <div>
                                 <textarea class="txtAtividades" asp-for="Atividades2" placeholder="Descreva suas atividades"></textarea>
@@ -429,7 +429,7 @@
                             <br>
                             <input type="month" asp-for="Termino3" />
                         </div>
-                        <div>
+                        <div class="divLeft">
                             <label>Atividades</label>
                             <div>
                                 <textarea class="txtAtividades" asp-for="Atividades3" placeholder="Descreva suas atividades"></textarea>
@@ -524,7 +524,7 @@
 
             </div>
 
-            <br /><br /> <input type="submit" value="Alerar Curriculo">
+            <br /><br /> <input type="submit" value="Alterar Curriculo">
         </form>
     </main>
 
