Estilização da tela de Impressao

--- a/N2B1_CadCurriculos/Views/Curriculo/Cadastro.cshtml
+++ b/N2B1_CadCurriculos/Views/Curriculo/Cadastro.cshtml
@@ -446,6 +446,7 @@
             <div class="Idioma">
                 <div>
                     <h2>Idiomas</h2>
+                    <br />
                     <img id="btnAdicionaIdioma" src="~/img/add.png" onclick="showIdioma()" width="50" height="50" />
                     <img id="btnRemoveIdioma" src="~/img/remove.png" onclick="esconderIdioma()" style="display: none" width="50" height="50" />
                 </div>
@@ -484,7 +485,7 @@
                                 <input asp-for="Idioma2" />
                             </div>
                         </div>
-                        <div class="divLeft">
+                        <div class="divRight">
                             <div>
                                 <label>Conhecimento</label>
                                 <br>
@@ -518,8 +519,6 @@
                         </div>
                     </div>
                 </div>
-
-                <br />
 
 
             </div>
