--- a/N2B1_CadCurriculos/Views/Curriculo/Editar.cshtml
+++ b/N2B1_CadCurriculos/Views/Curriculo/Editar.cshtml
@@ -446,6 +446,7 @@
             <div class="Idioma">
                 <div>
                     <h2>Idiomas</h2>
+                    <br />
                     <img id="btnAdicionaIdioma" src="~/img/add.png" onclick="showIdioma()" width="50" height="50" />
                     <img id="btnRemoveIdioma" src="~/img/remove.png" onclick="esconderIdioma()" style="display: none" width="50" height="50" />
                 </div>
@@ -524,7 +525,7 @@
 
             </div>
 
-            <br /><br /> <input type="submit" value="Alterar Curriculo">
+            <br /><br /> <input class="btnSalvarCurriculo" type="submit" value="Alterar Curriculo">
         </form>
     </main>
 
