--- a/N2B1_CadCurriculos/wwwroot/css/Cadastro.css
+++ b/N2B1_CadCurriculos/wwwroot/css/Cadastro.css
@@ -92,7 +92,6 @@ input {
     border-style: hidden;
     border-radius: 6px;
     box-shadow: 0px 0px 2px rgba(66,66,66,.86);
-    text-shadow: -50px 0px 0px rgba(66,66,66,.100);
 }
 
 label {
@@ -164,7 +163,7 @@ label {
     border-style: hidden;
     border-radius: 6px;
     box-shadow: 0px 0px 2px rgba(66,66,66,.86);
-    text-shadow: -50px 0px 0px rgba(66,66,66,.100);
+    text-shadow: 0px 0px 0px rgba(66,66,66,.100);
 }
 
 #Formacao2, #Formacao3, #Formacao4, #Formacao5 {
@@ -194,9 +193,9 @@ label {
     padding-bottom:50px;
 }
 
-#dadosIdioma2, #dadosIdioma3 {
-    margin-top: 20px;
-    padding-top: 20px;
+#dadosIdioma2 {
+    margin-top: 30px;
+    padding-top: 30px;
     font-size: 20px;
     background-color: var(--color1);
     list-style: none;
@@ -205,7 +204,8 @@ label {
     float: left;
     border-top: 2px solid black;
     border-color: var(--colorBG);
-    margin-right: 600px;
+    margin-top: 30px;
+    padding-bottom: 50px;
 }
 
 .btnSalvarCurriculo{
