--- a/N2B1_CadCurriculos/wwwroot/css/Impressao.css
+++ b/N2B1_CadCurriculos/wwwroot/css/Impressao.css
@@ -1,28 +1,100 @@
-﻿body{
+﻿:root {
+    --colorBG: #ffffff;
+    --color1: #b4b4b4;
+    --colorText: #000000;
+}
+body{
     margin-top: 50px;
 }
-a{
-    font-weight:600;
+h1 {
+    font-size: 35px;
+    font-weight: 400;
+    margin-bottom: 25px;
 }
+
+.div1 {
+    width: 1000px;
+    height: 220px;
+    margin: auto;
+    width: 100%;
+    border-bottom: solid 2px var(--color1);
+}
+
 .DadosPessoais {
     float: left;
-    padding: 40px 0px;
+    padding: 50px 0px;
 }
 
 #nome {
-    font-size: 40px;
+    font-size: 45px;
 }
 
 #cargo {
-    font-size: 20px;
+    font-size: 25px;
+    font-weight:350;
 }
 
 .DadosPessoais2 {
     float: right;
     padding: 20px;
+    font-size:17px;
 }
+
+    .DadosPessoais2 a {
+        font-weight: 700;
+    }
 
 .Endereco{
     float:right;
 }
 
+.Educacao{
+    margin: 15px;
+    margin-top:30px;
+    font-size: 17px;
+    font-weight:300;
+}
+
+    .Educacao a{
+        font-size:25px;
+        font-weight:400;
+    }
+
+#divCurso1, #divCurso2, #divCurso3, #divCurso4, #divCurso5{
+    margin-bottom: 15px;
+    margin-left: 30px;
+}
+
+.Experiencias {
+    margin: 15px;
+    margin-top: 70px;
+    font-size: 17px;
+    font-weight: 300;
+}
+
+    .Experiencias a {
+        font-size: 25px;
+        font-weight: 400;
+    }
+
+#divExperiencia1, #divExperiencia2, #divExperiencia3 {
+    margin-bottom: 15px;
+    margin-left: 30px;
+}
+
+.Idiomas {
+    margin: 15px;
+    margin-top: 70px;
+    font-size: 17px;
+    font-weight: 300;
+}
+
+    .Idiomas a {
+        font-size: 25px;
+        font-weight: 400;
+    }
+
+#divIdioma1, #divIdioma2, #divIdioma3 {
+    margin-bottom: 15px;
+    margin-left: 30px;
+}
