--- a/N2B1_CadCurriculos/Views/Curriculo/Index.cshtml
+++ b/N2B1_CadCurriculos/Views/Curriculo/Index.cshtml
@@ -13,8 +13,8 @@
         <nav>
             <h1 class="titulo">Gerador de Currículos </h1>
             <ul class="options">
-                <li><a asp-area="" asp-controller="Curriculo" asp-action="Cadastro">Cadastrar</a></li>
-                <li><a asp-area="" asp-controller="Curriculo" asp-action="Listagem">Listagem</a></li>
+                <li><a asp-area="" asp-controller="Curriculo" asp-action="Cadastro">Novo Currículo</a></li>
+                <li><a asp-area="" asp-controller="Curriculo" asp-action="Listagem">Meus Currículos</a></li>
                 <li><a asp-area="" asp-controller="Curriculo" asp-action="Sobre">Sobre</a></li>
             </ul>
         </nav>
@@ -23,7 +23,7 @@
     <div class="div1">
         <figure>
             <figure id="click">
-                <img src="~/img/click.png" width="120px" height="110px"/>
+                
             </figure>
         </figure>
         <h2>Praticidade. </h2>
@@ -36,7 +36,7 @@
     <div class="div2">
         <figure>
             <figure id="curriculum">
-                <img src="~/img/curriculo.png" width="120px" height="120px" />
+                
             </figure>
         </figure>
             <h2>Organização. </h2>
@@ -49,7 +49,7 @@
     <div class="div3">
         <figure>
             <figure id="idea">
-                <img src="~/img/idea.png" width="110px" height="120px" />
+                
             </figure>
         </figure>
         <h2>Apresentação. </h2>
