--- a/N2B1_CadCurriculos/Views/Curriculo/Listagem.cshtml
+++ b/N2B1_CadCurriculos/Views/Curriculo/Listagem.cshtml
@@ -11,7 +11,7 @@
 
 
     <div>
-        <h1 class="titulo">Relação de currículos cadastrados</h1>
+        <h1 class="titulo">Meus Currículos</h1>
 
         <div class="tableListagem">
             <table class="table table-responsive table-striped">
