--- a/N2B1_CadCurriculos/Views/Curriculo/Sobre.cshtml
+++ b/N2B1_CadCurriculos/Views/Curriculo/Sobre.cshtml
@@ -1,29 +1,36 @@
 ﻿@{
     ViewData["Title"] = "Sobre";
 }
+<head>
+    <link rel="stylesheet" href="~/css/Sobre.css">
+</head>
 
 <body>
     <header>
-        <h1>@ViewData["Title"]</h1>
+        <h1>Sobre</h1>
     </header>
 
     <main>
         <h2>Desenvolvedores</h2>
 
-        <img src="/img/gustavo.jpg" width="70" height="70">
-        <p>Gustavo Pepinelli Salgado</p>
-        <p>RA: 081190006</p>
-        <br />
-        <br />
-        <img src="/img/marcio.png" width="70" height="70">
+        <div class="divGustavo">
+            <img src="/img/gustavo.jpg" width="250" height="250">
+            <p>Gustavo Pepinelli Salgado</p>
+            <p>RA: 081190006</p>
+        </div>
+
+        <div class="divMarcio">
+        <img src="/img/marcio.png" width="250" height="250">
         <p>Márcio Rios Kunimura</p>
         <p>RA: 081200041</p>
-        <br />
-        <br />
-        <img src="/img/rodrigo.png" alt="foto do rod" width="70" height="70">
+        </div>
+
+        <div class="divRodrigo">
+        <img src="/img/rodrigo.png" alt="foto do rod" width="250" height="250">
         <p>Rodrigo Kawaura Montemor </p>
         <p>RA: 081190012</p>
-        <br />
-        <br />
+        </div>
+        
+
     </main>
 </body>
