--- a/N2B1_CadCurriculos/wwwroot/css/Impressao.css
+++ b/N2B1_CadCurriculos/wwwroot/css/Impressao.css
@@ -1,6 +1,6 @@
 ﻿:root {
     --colorBG: #ffffff;
-    --color1: #b4b4b4;
+    --color1: #808080;
     --colorText: #000000;
 }
 body{
@@ -58,6 +58,7 @@ h1 {
     .Educacao a{
         font-size:25px;
         font-weight:400;
+        color:var(--colorBG);
     }
 
 #divCurso1, #divCurso2, #divCurso3, #divCurso4, #divCurso5{
