--- a/N2B1_CadCurriculos/wwwroot/css/Index.css
+++ b/N2B1_CadCurriculos/wwwroot/css/Index.css
@@ -1,6 +1,6 @@
 ﻿:root {
     --colorBG: #ffffff;
-    --color1: #333;
+    --color1: #e8e8e8;
     --colorText: #000000;
 }
 
@@ -8,14 +8,18 @@ body{
     background-color:var(--colorBG);
 }
 
+header{
+    padding-bottom:70px;
+}
+
 .titulo {
-    margin: auto;
-    width: 54%;
-    padding: 30px;
-    font-size: 54px;
+    padding-top: 40px;
+    font-size: 45px;
     font-weight: 300;
     line-height: 58px;
     color: var(--colorText);
+    padding-bottom: 70px;
+    float:left;
 }
 
 
@@ -26,11 +30,12 @@ h2 {
 
 .options {
     font-size: 30px;
-    padding: 0px;
+    padding-top: 30px;
     margin: 0px;
     background-color: var(--colorBG);
     list-style: none;
     font-weight: 300;
+    float:right;
 }
 
     .options li {
@@ -38,7 +43,7 @@ h2 {
     }
 
         .options li a {
-            padding: 30px 130px;
+            padding: 20px 25px;
             display: inline-block;
             background-color: var(--colorBG);
             color: #333;
@@ -51,7 +56,7 @@ h2 {
             .options li a:hover {
                 background-color: var(--color1);
                 color: var(--colorText);
-                border-bottom: 5px solid var(--colorBG);
+                border-bottom: 2px solid var(--colorBG);
             }
 
 
@@ -63,18 +68,20 @@ h2 {
     text-align: left;
     font-weight: 400;
     color: var(--colorText);
-    border: 1px solid var(--colorText);
+    margin-top: 100px;
+    box-shadow: 3px 3px var(--color1), -1em 0 0.4em var(--color1);
 }
+
 
 .div2 {
     font-size: 20px;
     padding: 20px 25px;
     margin: 50px;
-    border: 1px solid var(--colorText);
     list-style: none;
     text-align: left;
     font-weight: 400;
     color: var(--colorText);
+    box-shadow: 3px 3px var(--color1), -1em 0 0.4em var(--color1);
 }
 
 #curriculum{
@@ -97,9 +104,9 @@ h2 {
     font-size: 20px;
     padding: 20px 25px;
     margin: 50px;
-    border: 1px solid var(--colorText);
     list-style: none;
     text-align: left;
     font-weight: 400;
     color: var(--colorText);
+    box-shadow: 3px 3px var(--color1), -1em 0 0.4em var(--color1);
 }
