--- a/N2B1_CadCurriculos/Views/Curriculo/Impressao.cshtml
+++ b/N2B1_CadCurriculos/Views/Curriculo/Impressao.cshtml
@@ -14,7 +14,7 @@
 
 <body onload="ApagaCampos()">
     
-    <div>
+    <div id="impressao">
         <!--DadosPessoais e Endereço-->
         <div class="div1">
             <div class="DadosPessoais">
