Idioma ingles, pode estar errado

--- a/N2B1_CadCurriculos/Views/Curriculo/Index.cshtml
+++ b/N2B1_CadCurriculos/Views/Curriculo/Index.cshtml
@@ -23,7 +23,7 @@
     <div class="div1">
         <figure>
             <figure id="click">
-                
+
             </figure>
         </figure>
         <h2>Praticidade. </h2>
@@ -36,20 +36,20 @@
     <div class="div2">
         <figure>
             <figure id="curriculum">
-                
+
             </figure>
         </figure>
-            <h2>Organização. </h2>
-            <p>
-                Suas informações são organizadas da melhor maneira, facilitando
-                a visualização do recrutador e destacando suas qualidades de forma visível.
-            </p>
+        <h2>Organização. </h2>
+        <p>
+            Suas informações são organizadas da melhor maneira, facilitando
+            a visualização do recrutador e destacando suas qualidades de forma visível.
+        </p>
     </div>
 
     <div class="div3">
         <figure>
             <figure id="idea">
-                
+
             </figure>
         </figure>
         <h2>Apresentação. </h2>
@@ -59,4 +59,5 @@
         </p>
     </div>
 
+    <a asp-area="" asp-controller="Curriculo" asp-action="IndexEN">EN</a>
 </body>
