--- a/N2B1_CadCurriculos/Views/Curriculo/Impressao.cshtml
+++ b/N2B1_CadCurriculos/Views/Curriculo/Impressao.cshtml
@@ -37,7 +37,7 @@
             <h1>Formação Acadêmica</h1>
             <div id="divCurso1" style="display: block">
                 <input value="@Model.Curso1" id="curso1" hidden />
-                <label><a>@Model.Curso1 - @Model.Instituicao1</a></label><br />
+                <label><a class="cursos">@Model.Curso1 - @Model.Instituicao1</a></label><br />
                 <label>@Model.Escolaridade1 - @Model.Situacao1 - @Model.Periodo1 </label><br />
                 <label>Formação: @Model.Conclusao1.ToString($"MMMM/yyyy")</label><br />
             </div>
