--- a/N2B1_CadCurriculos/Views/Curriculo/Sobre.cshtml
+++ b/N2B1_CadCurriculos/Views/Curriculo/Sobre.cshtml
@@ -26,7 +26,7 @@
         </div>
 
         <div class="divRodrigo">
-        <img src="/img/rodrigo.png" alt="foto do rod" width="250" height="250">
+        <img src="/img/rodrigo.jpeg" alt="foto do rod" width="250" height="250">
         <p>Rodrigo Kawaura Montemor </p>
         <p>RA: 081190012</p>
         </div>
