--- a/N2B1_CadCurriculos/Views/Curriculo/Index.cshtml
+++ b/N2B1_CadCurriculos/Views/Curriculo/Index.cshtml
@@ -59,5 +59,5 @@
         </p>
     </div>
 
-    <a asp-area="" asp-controller="Curriculo" asp-action="IndexEN">EN</a>
+    <a class="Language" asp-area="" asp-controller="Curriculo" asp-action="IndexEN">EN</a>
 </body>
