--- a/N2B1_CadCurriculos/wwwroot/css/Index.css
+++ b/N2B1_CadCurriculos/wwwroot/css/Index.css
@@ -111,3 +111,8 @@ h2 {
     color: var(--colorText);
     box-shadow: 3px 3px var(--color1), -1em 0 0.4em var(--color1);
 }
+
+
+.Language{
+    color:var(--colorText);
+}
